--- a/carrito.html
+++ b/carrito.html
@@ -43,6 +43,9 @@
         <section class="total">
             <h3>Total: <span id="total-precio">S/ 0.00</span></h3>
             <button id="vaciar-carrito" class="btn btn-danger">Vaciar carrito</button>
+            <button onclick="enviarWhatsApp()" class="btn-finalizar">
+    Finalizar Compra por WhatsApp
+</button>
             <a href="https://api.whatsapp.com/send?phone=978179789&text=Hola!%20Quiero%20cotizar%20los%20juegos%20de%20mi%20carrito" target="_blank" class="btn btn-primary">Cotizar por WhatsApp</a>
         </section>
     </main>
